--- a/src/app.scss
+++ b/src/app.scss
@@ -5,3 +5,39 @@
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&family=Macondo&family=Montserrat:wght@200;400;700&family=Roboto+Slab:wght@300&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,700;1,300&family=Square+Peg&display=swap");
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+$bg-color: rgb(30, 30, 30);
+
+.header {
+  height: 200px;
+  background-color: $bg-color;
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  box-sizing: border-box;
+  justify-content: space-between;
+
+  > img {
+    height: 100%;
+  }
+  > div {
+    width: 100%;
+    margin-left: 4vmax;
+
+    > a {
+      margin: 2vmax;
+      font-size: 1.3rem;
+      font-weight: 300;
+    }
+  }
+  > svg {
+    color: white;
+    font-size: 2rem;
+    cursor: pointer;
+  }
+}
