--- a/src/app.scss
+++ b/src/app.scss
@@ -14,7 +14,7 @@ a {
 $bg-color: rgb(30, 30, 30);
 
 .header {
-  height: 200px;
+  height: 150px;
   background-color: $bg-color;
   display: flex;
   align-items: center;
@@ -39,5 +39,9 @@ $bg-color: rgb(30, 30, 30);
     color: white;
     font-size: 2rem;
     cursor: pointer;
+
+    &:hover {
+      color: rgb(216, 216, 216);
+    }
   }
 }
