--- a/src/app.scss
+++ b/src/app.scss
@@ -2,12 +2,12 @@
   margin: 0%;
   padding: 0%;
   font-family: "Roboto", sans-serif;
-  color: white;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&family=Macondo&family=Montserrat:wght@200;400;700&family=Roboto+Slab:wght@300&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,700;1,300&family=Square+Peg&display=swap");
 
-a {
+a,
+h2 {
   color: white;
   text-decoration: none;
 }
