--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -30,3 +30,24 @@ $bg-color: rgb(30, 30, 30);
     transform: translateY(-10px);
   }
 }
+
+.genreBox {
+  overflow-x: auto;
+  display: flex;
+  background-color: $bg-color;
+  > a {
+    color: black;
+    background-color: white;
+    padding: 1rem 0;
+    border-radius: 5px;
+    min-width: 10rem;
+    margin: 1rem;
+    text-align: center;
+    padding: 1rem 0;
+    transition: all 0.5s;
+
+    &:hover {
+      background: rgb(218, 210, 210);
+    }
+  }
+}
