--- a/src/app.scss
+++ b/src/app.scss
@@ -2,17 +2,20 @@
   margin: 0%;
   padding: 0%;
   font-family: "Roboto", sans-serif;
+  color: white;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
+$bg-color: rgb(30, 30, 30);
 
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&family=Macondo&family=Montserrat:wght@200;400;700&family=Roboto+Slab:wght@300&family=Source+Sans+Pro:ital,wght@0,200;0,400;0,700;1,300&family=Square+Peg&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&family=Macondo&family=Montserrat:wght@200;400;700&family=Roboto+Slab:wght@300&family=Source+Sans+Pro:ital,wght@100,200;0,400;0,700;1,300&family=Square+Peg&display=swap");
 
-a,
-h2 {
+a {
   color: white;
   text-decoration: none;
 }
-
-$bg-color: rgb(30, 30, 30);
 
 .header {
   height: 150px;
