--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -3,6 +3,79 @@ $bg-color: rgb(30, 30, 30);
 .banner {
   height: 400px;
   background-color: $bg-color;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 3rem;
+  box-sizing: border-box;
+
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0%;
+    position: absolute;
+    background-color: $bg-color;
+    opacity: 0.4;
+  }
+
+  h1,
+  p {
+    color: white;
+    font-size: 3rem;
+    width: 40%;
+    z-index: 10;
+  }
+
+  p {
+    font-size: 1rem;
+    letter-spacing: 2px;
+    word-spacing: 4px;
+    font-weight: 100;
+  }
+
+  > div {
+    display: flex;
+
+    button {
+      padding: 1rem;
+      width: 150px;
+      outline: none;
+      border: none;
+      z-index: 10;
+      border-radius: 5px;
+      margin: 1rem;
+      font-size: 1.2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: all 0.5s;
+
+      &:hover {
+        opacity: 0.6;
+      }
+
+      &:nth-child(odd) {
+        background-color: white;
+        color: black;
+      }
+
+      &:nth-child(even) {
+        background-color: rgb(193, 179, 179);
+        color: white;
+      }
+
+      svg {
+        font-size: 1.7rem;
+        margin: 0 10px;
+      }
+    }
+  }
 }
 
 .row {
@@ -45,6 +118,9 @@ $bg-color: rgb(30, 30, 30);
     text-align: center;
     padding: 1rem 0;
     transition: all 0.5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &:hover {
       background: rgb(218, 210, 210);
